fixed small bugs and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -21,5 +21,5 @@ body {
 
 .container {
   margin: 15px auto auto auto;
-  width: 400px;
+  width: 425px;
 }
